# icloudbridge

./: changelog.md  pyproject.toml
docs/: notion-reminders-sync-plan.md
docs/plans/: 2026-06-06-notion-production-status.md
frontend/: package-lock.json  package.json
icloudbridge/api/: scheduler.py
icloudbridge/api/routes/: system.py
icloudbridge/cli/: main.py
icloudbridge/core/: config.py  notion_reminders_readonly.py  sync.py
icloudbridge/sources/notes/: applescript.py
icloudbridge/sources/reminders/: eventkit.py  notion_adapter.py
icloudbridge/utils/: db.py
tests/: test_notion_adapter.py  test_notion_production_status_cli.py  test_notion_readonly_matching.py  test_notion_test_scope_cli.py
